--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   crypto: ^3.0.6
   flutter_secure_storage: ^4.2.1
   animate_do: ^3.3.4
+  firebase_messaging: ^15.1.6
+  flutter_app_badger: ^1.3.0
 
 dev_dependencies:
   flutter_test:
