--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   animate_do: ^3.3.4
   firebase_messaging: ^15.1.6
   flutter_app_badger: ^1.3.0
+  google_sign_in: ^6.2.2
+  
 
 dev_dependencies:
   flutter_test:
